# Modern-C-Exercises

./: README.md
2_1_1_nullptr/: nullptr.cpp
2_1_2_constexpr/: CMakeLists.txt  Readme.md  constexpr.cpp
CMake Expts/: CMakeLists.txt  ToDo.cpp  hello  main.cpp
nullptr/: CMakeLists.txt  Readme.md
